# kiki

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  database.py  exception_handlers.py  exceptions.py  main.py  middleware.py  models.py
app/api/: admin.py  ai.py  auth.py  categories.py  comments.py  posts.py  recommendations.py  social.py  users.py
app/auth/: auth.py
app/core/: __init__.py  ai_background_tasks.py  background_tasks.py  base_repository.py  base_service.py  cache.py  config.py  dependency_injection.py  domain_events.py  event_handlers.py  exceptions.py  interfaces.py  recommendation_background_tasks.py  repositories.py  service_factories.py  service_interfaces.py
app/models/: __init__.py  associations.py  base.py  category.py  comment.py  post.py  recommendation.py  social.py  user.py
app/schemas/: __init__.py  admin.py  ai.py  category.py  comment.py  post.py  recommendation.py  user.py
app/services/: __init__.py  admin.py  ai_service.py  category.py  comment.py  post.py  recommendation_service.py  social.py  user.py  user_service.py
app/tests/: conftest.py  test_ai_api.py  test_ai_service.py  test_categories.py  test_comments.py  test_posts.py  test_recommendation_api.py  test_recommendation_service.py  test_social.py  test_users.py
app/utils/: logger.py
docs/: ai_configuration_example.md  ai_features.md  ai_recommendations.md  api.md  architecture.md  architecture_improvements.md  code_improvements_summary.md  refactoring_improvements.md
scripts/: init_db.py
